src/components/Section1/Section1.scoped.scss
// * {
//   border: solid 1px red;
// }

.section-1 {
  width: 90vw;
  max-width: 1000px;
  margin: 100px auto;
}

.section1-scroll-container {
  width: 100%;
  height: 120vh;
  margin: auto;
}

.content-container {
  position: sticky;
  position: -webkit-sticky;
  top: 200px;
  width: 100%;
  margin: 2rem auto;
  //border: solid 1px red;
}

.plot-container {
  width: 90%;
  margin: 0 auto 4rem;
}

.text-overlay-container {
  position: absolute;
  top: 0;
  left: 0; // to center
  right: 0; // to center
  margin: 4rem auto;
  width: 90%;
  max-width: 720px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.plot-text {
  width: 90%;
  font-size: 1.9rem;
  line-height: 1.55;
}

#revealed-text {
  align-self: flex-end;
  margin-right: 5%;
  margin-top: 6rem;
  margin-bottom: 6rem;
  height: 5rem;
  font-size: 2.8rem;
  font-family: 'Musee-Bold';
  color: $accent3;
}

.middle-section {
  margin-top: 13rem;
  margin-bottom: 10rem;
}

.article-generators-container {
  width: 90%;
  margin: 2rem auto;
  display: flex;
  justify-content: space-between;
}

.stats-container {
  width: 90%;
  margin: 4rem auto;
  display: flex;
  justify-content: space-between;
}

@include tablet {
  #revealed-text {
    margin-right: 7%;
    margin-top: 3rem;
    margin-bottom: 3rem;
  }
}

@include mobile {
  .content-container {
    margin-bottom: 6rem;
  }

  .middle-section {
    margin-top: 6rem;
    margin-bottom: 3rem;
  }

  .article-generators-container {
    flex-direction: column;
  }

  .stats-container {
    margin: 1rem auto;
    flex-direction: column;
    align-items: center;
  }

  .text-overlay-container {
    margin: 0rem auto 2rem;

    .plot-text {
      width: 100%;
    }

    .text-2 {
      margin-top: 22rem;
      margin-bottom: 4rem;
    }
  }

  #revealed-text {
    margin-right: 23%;
    margin-top: 3rem;
    margin-bottom: 3rem;
    font-size: 2.3rem;
  }

  .plot-container {
    margin-top: 40px;
    width: 100%;
    height: 100%;
  }
}

